0.0435 2018-05-24
  - Try to show NA in CPAN testers
  - rename value_t package descriptor to mulnum_t
0.0434 2018-05-21
  - add  SPVM::StringList
  - remove SPVM::list
  - In any object array argument of SPVM::call_sub, array reference is converted to any object array
    
      SPVM::List->new_with_array([SPVM::Int->new(1), SPVM::Double->new(2.5), undef])
  - Fix value fields 16 length bug.
  - add complex double and float operation +, -, *, /
  - rename new_dcomplex to complex
  - rename new_fcomplex to complexf
  - add SPVM::Unicode::uchar, u8, u16
  - rename SPVM::Build::Config::new_default to new_c99
  - fix Windows MinGW compile bugs
  - remove SPVM::Time::Moment, SPVM::Time::Format
  - remove getenv for Windows compatibility
  - fix winsocket bugs and exe bugs
0.0433 2018-05-08
  - Change IO::File::write, IO::Socket::write to 
      sub write : int ($self : self, $buffer : string, $legnth : int);
  - add fileno to SPVM::IO::Socket
  - add SPVM::IO::Select
  - remove SPVM::set_exception_undef
  - add SPVM::set_exception
  - add SPVM::exception
  - add shutdown, close to IO::Socket
  - add SPVM::ByteList, SPVM::ShortList, SPVM::IntList, SPVM::LongList, SPVM::FloatList, SPVM::DoubleList
  - remove SPVM::CORE::list function
  - rename memcpy to memcpyb
  - rename memmove to memmoveb
  - add memcpys, memcpyi, memcpyl, memcpyf, memcpyd
  - add memmoves, memmovei, memmovel, memmovef, memmoved
0.0432 2018-04-29
  - Allow lower case package variable name and allow upper case lexical variable name
    This is same implementation as Perl
0.0431 2018-04-27
  - move time function to SPVM::Time module
    because time module need to define _XOPEN_SOURCE for thread safe portability on unix/linux and Windows/minGW
  - add Time::localtime, Time::gmtime
  - add #define _XOPEN_SOURCE if needed
  - add strftime, strptime, mktime, timegm to SPVM::Time
  - remove fread, fwrite, fopen ,fclose, fseek, fgets, fgets_chomp, slurp_file. Thease functions is moved to SPVM::IO::File